--- a/FrontEnd/src/app/components/footer/footer.component.html
+++ b/FrontEnd/src/app/components/footer/footer.component.html
@@ -5,10 +5,10 @@
           class="text-secondary font-weight-bold">FADILI Youssra Rim</span></small>
     </div>
     <div class="col-md-12 text-center mb-3">
-      <a href="https://github.com/azouaoui-med" target="_blank"
+      <a href="https://www.github.com/yousrarim" target="_blank"
         class="btn btn-sm bg-light text-dark shadow-sm rounded-circle text-light m-2"><i class="fab fa-github"></i></a>
    
-      <a href="https://www.linkedin.com/in/mohamed-azouaoui/" target="_blank"
+      <a href="https://www.linkedin.com/in/rim-youssra-fadili-901a34157/" target="_blank"
         class="btn btn-sm bg-light text-dark shadow-sm rounded-circle text-light m-2"><i
           class="fab fa-linkedin-in"></i></a>
     </div>
