--- a/FrontEnd/src/app/pages/activity/create-activity/create-activity.component.html
+++ b/FrontEnd/src/app/pages/activity/create-activity/create-activity.component.html
@@ -17,7 +17,7 @@
         
         <button type="button" class="btn btn-lightning rounded-0 mb-2 mr-2" label="Click" (click)="toggleCss()"> CSS </button>
         <button type="button" class="btn btn-lightning rounded-0 mb-2 mr-2" label="Click" (click)="toggleaudit()"> AUDITS </button>
-        <button type="button" class="btn btn-lightning rounded-0 mb-2 mr-2" label="Click" (click)="togglepgcrr()"> PG&CRR </button>
+        <button type="button" class="btn btn-lightning rounded-0 mb-2 mr-2" label="Click" (click)="togglepgcrr()"> Pass Gate </button>
         <button type="button" class="btn btn-lightning rounded-0 mb-2 mr-2" label="Click" (click)="togglepdri()"> PDRI </button>
         <button type="button" class="btn btn-lightning rounded-0 mb-2 mr-2" label="Click" (click)="togglev()"> V+/S+ </button>
       
