--- a/FrontEnd/src/app/pages/createpin/createpin.component.html
+++ b/FrontEnd/src/app/pages/createpin/createpin.component.html
@@ -9,7 +9,7 @@
 
 
 <div>
-  <h4 class="mb-4 text-muted">Submit a QA metric</h4>
+  <h4 class="mb-4 text-muted">Create a new PIN</h4>
   <div class="row">
     <div class="col-md-12 col-lg-12 mb-4">
       <div class="card border-0 rounded-0">
@@ -393,7 +393,6 @@
 
 <div>
 
-  <h4 class="mb-4 text-muted">Create new PIN</h4>
   
 
   <div class="row">
