--- a/FrontEnd/src/app/pages/planing/plan/plan.component.html
+++ b/FrontEnd/src/app/pages/planing/plan/plan.component.html
@@ -14,7 +14,7 @@
           <button type="button" class="btn btn-lightning rounded-0 mb-2 mr-2" label="Click" (click)="toggleaudit()">
             AUDITS </button>
           <button type="button" class="btn btn-lightning rounded-0 mb-2 mr-2" label="Click" (click)="togglepgcrr()">
-            PG&CRR </button>
+            Pass Gate </button>
           <button type="button" class="btn btn-lightning rounded-0 mb-2 mr-2" label="Click" (click)="togglepdri()"> PDRI
           </button>
           <button type="button" class="btn btn-lightning rounded-0 mb-2 mr-2" label="Click" (click)="togglev()"> V+/S+
